--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Welcome to the Cloud Storage Service</h1>
+  <h1>Welcome to TotoB12 GitCloud</h1>
   <p>
     <a href="{{ url_for('login') }}">Login</a> or
     <a href="{{ url_for('register') }}">Register</a>
